# terrain

./: CMakeLists.txt  License.txt  README.md  generate-changes
examples/: .gitignore  simplecolormap
examples/change_count/: Rulefile  counts  run.sh
examples/offset/: Rulefile  offset_max.json  offset_min.json
examples/offset_magnitude/: Rulefile  offsets  radius_hist.json  run.sh
examples/radius/: Rulefile  radius_max.json  radius_min.json
examples/radius_magnitude/: Rulefile  offset_histogram.json  radiuses  run.sh
src/: BlockQueue.cpp  BlockQueue.hpp  FileDescriptorInput.cpp  FileDescriptorInput.hpp  InputChannel.cpp  InputChannel.hpp  accuraterenderchanges.cpp  buggyrenderchanges.cpp  colormap.cpp  colormap.hpp  convenience.hpp  generatechanges.cpp  heightfield2color.cpp  heightfield2model.cpp  heightfield2texture.cpp  pseudocolor.cpp  referencerenderchanges.cpp  render-changes.cpp  renderchanges.cpp  slowrenderchanges.cpp  vertexfield.cpp
test/: check.sh  cloudbuild.sh  cloudbuild.yaml  hfdiff  max-default.json  max.json  maxrange.json  min.json  minmax.json  minrange.json  range.json  within
test/port/: Linux.sh  amzn.sh  centos.sh  clang-build.sh  debian.sh  gcc-build.sh  rhel.sh  sles.sh  ubuntu.sh
test/reference/: .gitignore  Quick  README.md  Reference  Render  radius.json
